objects/CM_Custom_Package__c.object
<CustomObject>
    <description>This object hold complete packages created by users from features.</description>
    <fields>
        <fullName>ptt_IdCode__c</fullName>
        <description>Format VIB x.yyy</description>
        <inlineHelpText>Format VIB x.yyy</inlineHelpText>
        <label>Material item number</label>
        <length>13</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ptt_Index__c</fullName>
        <label>Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_System__c</fullName>
        <description>System (device, software) name.</description>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Calimaster</fullName>
                </value>
                <value>
                    <fullName>VIBGUARD Viewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Variant__c</fullName>
        <description>Specific sub type of system. It is allowed to select more than one as package can fit for more variants.</description>
        <label>Variant</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>ptt_System__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_isMultiorder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMultiorder</label>
        <type>Checkbox</type>
    </fields>
    <label>PT - CM Custom Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ptt_IdCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM Custom Packages</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Matrial_item_number</fullName>
        <active>true</active>
        <description>Verify if format of this field is like VIB 1.123.
Orginal: ^VIB\s[\d]\.[\d]{3}($|([\s]|[-]).+$)</description>
        <errorConditionFormula>NOT(
REGEX( ptt_IdCode__c , &quot;^VIB\\s[\\d]\\.[\\d]{3}($|([\\s]|[-]).+$)&quot;)
)</errorConditionFormula>
        <errorDisplayField>ptt_IdCode__c</errorDisplayField>
        <errorMessage>This value should have format like VIB 6.123 or VIB 6.123-EXT</errorMessage>
    </validationRules>
</CustomObject>